--- a/Assign2/css/style.css
+++ b/Assign2/css/style.css
@@ -291,15 +291,16 @@ nav {
     justify-content: center;
     overflow: hidden;
     flex-direction: column;
+    top: 80px;
 }
 
-#banner ~ div {
+/* #banner ~ div {
     position: relative;
     height: calc(100vh - 80px);
     width: 100vw;
     background-color: transparent;
     z-index: 100;
-}
+} */
 
 #banner #banner-images {
     height: 100%;
@@ -388,8 +389,17 @@ nav {
     }
 }
 
-#banner h1 {
+#banner-caption {
     position: absolute;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#banner-caption h1 {
     font-family: url('https://fonts.googleapis.com/css2?family=Syncopate&display=swap');
     font-size: 40px;
     letter-spacing: 8px;
@@ -400,8 +410,29 @@ nav {
     text-transform: uppercase;
     margin-top: -14px;
     text-align: center;
-    width: 90%;
 }
+
+
+#banner-caption a {
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    margin: 0 auto;
+    display: block;
+    transition: 0.2s ease-in-out;
+    text-align: center;
+    border: 1px solid white;
+    padding: 15px 20px;
+    border-radius: 20px;
+    z-index: 10;
+}
+
+#banner-caption a:hover {
+    color: black;
+    background-color: white;
+}
+
 
 @keyframes color-cycle {
     0% {
@@ -431,6 +462,10 @@ nav {
     background-size: fill;
     background-repeat: repeat;
     animation: bg-move 80s infinite linear;
+}
+
+.home-intro {
+    margin-top: calc(100vh - 80px);
 }
 
 #intro-background {
